--- a/static/css/mods.css
+++ b/static/css/mods.css
@@ -7,6 +7,20 @@
 
 html {
   background: white;
+  background-image: url('/metaspace_logo.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+html div:first-child {
+  background: rgba(255, 255, 255, 0.886);
+  padding: 1.5em;
+  background-blend-mode: multiply;
+}
+
+#home-subtitle {
+  font-size: .8em;
 }
 
 h1, h2, h3, h4, h5, h6, p, ul, li, a {
